# fitworld

./: .gitignore  history.txt  package-lock.json  package.json  schema.srqlnb  tailwind.config.js  vite.config.ts
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
.nx/workspace-data/: file-map.json  parsed-lock-file.json  project-graph.json
adapters/express/: vite.config.ts.timestamp-1718136368014-e6df69c722be8.mjs
frontend/: .gitignore  .prettierignore  .prettierrc.js  bun.lockb  database.surql  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json
frontend/.nx/workspace-data/: file-map.json  lockfile.hash  parsed-lock-file.json  project-graph.json
frontend/adapters/express/: vite.config.ts  vite.config.ts.timestamp-1718136368014-e6df69c722be8.mjs
frontend/public/: manifest.json
frontend/src/: global.css  root.tsx  routes.config.tsx  routes.gen.d.ts
public/: manifest.json  scrape.js
rust/food-group-seed/: Cargo.toml
rust/food-group-seed/src/: db_food_group.rs  food_group_raw_data.rs  main.rs  util.rs
src/: food_groups.json  global.css  root.tsx  routes.config.tsx  routes.gen.d.ts
src/components/: components.tsx
src/routes/: index.tsx  layout.tsx  plugin@auth.ts
src/util/: convertUnits.ts  createId.ts  formatNumber.ts  goals.ts  helpfullSeedDatabaseFunction.ts  isTextOfUserName.ts  parseMarkdown.ts  stringMinipuletion.ts  twoDecimalPoints.ts  types.ts  useDebouncer.ts
(+158 files in other folders)
