[package]
name = "noga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.116", features = ["arbitrary_precision"] }
surrealdb = { version = "1.4.2", features = ["kv-rocksdb"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
